# RegisLite

./: .env  .env.example  .gitignore  .jules_memory.json  ANALYSIS.md  Dockerfile  ENV_SETUP_GUIDE.md  GEMINI.md  README.md  RegisLite.desktop  app.py  brain_fix.py  check_size.ps1  conftest.py  error_log.txt  fix_debug_500.ps1  fix_final.py  fix_requirements.ps1  fix_timeout_ignore.ps1  gemini-extension.json  git_push.ps1  install_log.txt  logo prompt.txt  niezbednik google drive.lnk  organize_project.py  pyproject.toml  repair_final.py  requirements.txt  run.ps1  run.py  setup.cfg  setup.sh  setup_project.py  setup_project_v2.py  start.bat  start_app.sh  upgrade_brain.py
ai/: chatgpt_client.py
config/: env_config.py
debugger/: __init__.py  analyzer.py  chatgpt_client.py  debugger_analyzer.py  debugger_fix.py  debugger_loop.py  debugger_patcher.py  fix.py  loop.py  patcher.py
docs/: TECHNICAL_DOCUMENTATION.md  git_push prompt.txt
docs/notatki/Renowator/: renowacja.py  uruchom.bat
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart  theme.dart
flutter_app/lib/screens/: dashboard_screen.dart
flutter_app/lib/services/: api_service.dart
notatki/: 1. Ustaw Ollama na tak żeby mówił po polsku.txt  Jules debug.txt  Moduyfikacje UI.txt
rtc/: signaling.py
scripts/: fix_formatter.py  git_push.ps1  live.bat  start.bat  upgrade_ai_awareness.ps1  upgrade_ui_ai.ps1  upgrade_ultimate.py
services/: python_tool.py
src/: main.py
src/ai/: __init__.py  chatgpt_client.py  model_client.py  prompts.py
src/config/: env_config.py  errors.py
src/core/: config.py  logger.py
src/debugger/: debugger_analyzer.py  debugger_fix.py  debugger_loop.py  debugger_patcher.py
src/domain/: prompts.py  schemas.py
src/rtc/: __init__.py  session_manager.py  signaling.py  tool_executor.py
src/services/: __init__.py  file_tool.py  python_tool.py
src/static/: dashboard.html
static/: dashboard.html  index.html
tests/: conftest.py  test_ai.py  test_basic.py  test_gui_integration.py  test_health.py  test_tools.py
